# rCore

./: .gitignore  README.md
os/: Cargo.toml  Makefile  build.rs
os/src/: batch.rs  loader.rs  main.rs  timer.rs
os/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_set.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  task.rs
os/src/trap/: mod.rs
user/: Cargo.toml  Makefile
user/src/: lib.rs  syscall.rs
user/src/test/: mmap0.rs  mmap1.rs  mmap2.rs  mmap3.rs  unmap.rs  unmap2.rs
